# compressor_fouling_modeling

./: .gitignore  bayesian_calibration_guide.html  bayesian_calibration_guide.md  compressor_modeling_assignment.ipynb  ds_compressor_data.csv  mixture_model.html  mixture_model.ipynb  pyproject.toml  read.md  utility.py
